combine default and allowed groups