@@ -508,11 +508,11 @@ class IdentityZoneEndpointsMockMvcTests {
     }
 
     @Test
-    void createZoneWithNotAllowedGroupsFailsWithUnprocessableEntity() throws Exception {
+    void createZoneWithNoAllowedGroupsFailsWithUnprocessableEntity() throws Exception {
         String id = generator.generate();
         IdentityZone zone = this.createSimpleIdentityZone(id);
-        zone.getConfig().getUserConfig().setDefaultGroups(List.of("uaa.user", "openid"));
-        zone.getConfig().getUserConfig().setAllowedGroups(List.of("uaa.user")); // openid not allowed
+        zone.getConfig().getUserConfig().setDefaultGroups(Collections.emptyList());
+        zone.getConfig().getUserConfig().setAllowedGroups(Collections.emptyList()); // no groups allowed
 
         mockMvc.perform(
                 post("/identity-zones")
@@ -522,7 +522,7 @@ class IdentityZoneEndpointsMockMvcTests {
                 .andExpect(status().isUnprocessableEntity())
                 .andExpect(jsonPath("$.error").value("invalid_identity_zone"))
                 .andExpect(jsonPath("$.error_description").value("The identity zone details are invalid. " +
-                                                "The zone configuration is invalid. All default groups must be allowed"));
+                                                "The zone configuration is invalid. At least one group must be allowed"));
 
         assertEquals(0, zoneModifiedEventListener.getEventCount());
     }
